ローディング直したり、初期表示直したりー！！
